--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
         align-items: center;
         height: 100vh;
       }
+      .text-area {
+        resize: none;
+      }
+      .button {
+        margin-top: 15px;
+      }
       .error-msg {
         display: block;
         color: red;
+        font-family: sans-serif;
+        font-size: 14px;
       }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -22,7 +30,7 @@
     <form class="myForm" action="/si.js" id="myForm" method="POST">
       <div class="row">
         <div class="col-md-6">
-          <label class="form-label">Nombre:</label>
+          <label class="form-label">Name:</label>
           <input 
             name="name" 
             type="text" 
@@ -38,6 +46,22 @@
             name="username"
             class="validator form-control"
             data-validators="required alphanumeric length">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <label for="" class="form-label">Password:</label>
+          <input 
+            type="password" 
+            class="validator form-control"
+            data-validators="required passwordComplex">
+        </div>
+        <div class="col-md-6">
+          <label for="" class="form-label">Password:</label>
+          <input 
+            type="password" 
+            class="validator form-control"
+            data-validators="required passwordModerate">
         </div>
       </div>
       <div class="row">
@@ -58,7 +82,7 @@
             data-validators="required url">
         </div>
         <div class="col-md-4">
-          <label class="form-label">Edad:</label>
+          <label class="form-label">Age:</label>
           <input 
             type="number"
             name="age"
@@ -66,7 +90,19 @@
             data-validators="required integer">
         </div>
       </div>
-      <button class="button btn btn-primary" type="submit">Enviar</button>
+      <div>
+        <label for="" class="form-label">Message:</label>
+        <textarea 
+          name="message" 
+          cols="25" 
+          rows="10"
+          class="validator form-control text-area"
+          data-validators="length"
+          data-validators_minlength="20"></textarea>
+      </div>
+      <div class="button d-grid mx-auto">
+        <button class="btn btn-primary" type="submit">Send</button>
+      </div>
     </form>  
     <script src="./js/validator.js"></script>
     <script>
